--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,6 +1,11 @@
 <div class="flex flex-col items-start space-y-2">
-  <h2 class="text-xl font-bold">Game Mode</h2>
-  <ul>
+  <h2 class="text-xl font-bold hidden md:block">Game Mode</h2>
+  <button class="md:hidden" (click)="toggleMenu()">
+    <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
+    </svg>
+  </button>
+  <ul [ngClass]="{ 'hidden': !menuOpen, 'block': menuOpen }" class="md:block">
     <li>
       <a
         href="#"
