--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="flex min-h-screen relative">
     <!-- Navigation Menu for Game Mode -->
     <div class="absolute top-0 left-0 p-4">
-        <app-menu (gameModeChange)="onGameModeChange($event)"></app-menu>
+        <app-menu></app-menu>
     </div>
 
     <!-- Login Component -->
@@ -11,33 +11,6 @@
 
     <!-- Main Content -->
     <div class="flex-1 flex justify-center items-center p-4">
-        <div class="flex flex-col items-center">
-            <!-- AI Level Selection (only visible when 'Human vs AI' is selected) -->
-            <div *ngIf="gameMode === GameMode.HumanVsAI" class="flex justify-center space-x-4 mt-4">
-                <label>
-                    <input type="radio" name="aiLevel" [value]="AILevel.Easy" [(ngModel)]="aiLevel"
-                        (change)="onAILevelChange(AILevel.Easy)" />
-                    Easy
-                </label>
-                <label>
-                    <input type="radio" name="aiLevel" [value]="AILevel.Medium" [(ngModel)]="aiLevel"
-                        (change)="onAILevelChange(AILevel.Medium)" />
-                    Medium
-                </label>
-                <label>
-                    <input type="radio" name="aiLevel" [value]="AILevel.Hard" [(ngModel)]="aiLevel"
-                        (change)="onAILevelChange(AILevel.Hard)" />
-                    Hard
-                </label>
-            </div>
-
-            <!-- Player Names (only visible when 'Human vs Human' is selected) -->
-            <div *ngIf="gameMode === GameMode.HumanVsHuman" class="text-center text-xl font-bold mt-4">
-                <p>X {{ playerXName }} vs O {{ playerOName }}</p>
-            </div>
-
-            <!-- Board Component -->
-            <app-board [gameMode]="gameMode" [aiLevel]="aiLevel"></app-board>
-        </div>
+        <router-outlet></router-outlet>
     </div>
 </div>
