--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -1,5 +1,5 @@
 <div class="flex flex-col items-start space-y-2">
-  <h2 class="text-xl font-bold hidden md:block">Game Mode</h2>
+  <h2 class="text-xl font-bold hidden md:block">Offline Mode</h2>
   <button class="md:hidden" (click)="toggleMenu()">
     <svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16m-7 6h7"></path>
@@ -30,6 +30,37 @@
         (click)="selectMode(gameModes[1])"
       >
         Human vs AI
+      </a>
+    </li>
+  </ul>
+  <h2 class="text-xl font-bold hidden md:block mt-4">Online Mode</h2>
+  <ul [ngClass]="{ 'hidden': !menuOpen, 'block': menuOpen }" class="md:block">
+    <li>
+      <a
+        href="#"
+        class="block px-4 py-2 rounded"
+        [ngClass]="{
+          'font-bold': selectedRoom === 'create-room',
+          'text-black': selectedRoom !== 'create-room'
+        }"
+        [routerLink]="['create-room']"
+        (click)="navigateTo('create-room')"
+      >
+        Create Game Room
+      </a>
+    </li>
+    <li>
+      <a
+        href="#"
+        class="block px-4 py-2 rounded"
+        [ngClass]="{
+          'font-bold': selectedRoom === 'join-room',
+          'text-black': selectedRoom !== 'join-room'
+        }"
+        [routerLink]="['join-room']"
+        (click)="navigateTo('join-room')"
+      >
+        Join Game Room
       </a>
     </li>
   </ul>
